Fixed unneccessary vert scrollbar.

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -1,4 +1,4 @@
 .mybody {
   position: relative;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
